# CvGameCoreDLL

./: .clang-format  .editorconfig  .gitignore  Cargo.toml  README.md  config.ron  rustfmt.toml
.cargo/: config.toml
CvGameCoreDLL/: AI_Defines.h  CvArea.cpp  CvArea.h  CvArtFileMgr.cpp  CvArtFileMgr.h  CvCity.cpp  CvCity.h  CvCityAI.cpp  CvCityAI.h  CvDLLButtonPopup.cpp  CvDLLButtonPopup.h  CvDLLEngineIFaceBase.h  CvDLLEntity.cpp  CvDLLEntity.h  CvDLLEntityIFaceBase.h  CvDLLEventReporterIFaceBase.h  CvDLLFAStarIFaceBase.h  CvDLLFlagEntityIFaceBase.h  CvDLLIniParserIFaceBase.h  CvDLLInterfaceIFaceBase.h  CvDLLPlotBuilderIFaceBase.h  CvDLLPython.cpp  CvDLLPythonIFaceBase.h  CvDLLSymbolIFaceBase.h  CvDLLUtilityIFaceBase.h  CvDLLWidgetData.cpp  CvDLLWidgetData.h  CvDLLXMLIFaceBase.h  CvDeal.cpp  CvDeal.h  CvDefines.h  CvDiploParameters.cpp  CvDiploParameters.h  CvDllPythonEvents.cpp  CvDllPythonEvents.h  CvDllTranslator.cpp  CvDllTranslator.h  CvEnums.h  CvEventReporter.cpp  CvEventReporter.h  (+157 more)
compat/: cstdint
dll/: Cargo.toml  cbindgen.toml
dll/src/: fassert.rs  lib.rs  macros.rs  panic.rs  print.rs  system_alloc.rs
dll/src/cv/: game.rs  globals.rs  init_core.rs  mod.rs  random.rs  string.rs
dll/src/cv/enums/: era_types.rs  game_mode.rs  game_options_types.rs  game_speed.rs  game_type.rs  mod.rs  multiplayer_option_types.rs  player_types.rs  slot_status.rs  team_types.rs  yes_no_enum.rs
dll/src/cv/infos/: era_info.rs  game_speed.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: config.rs  dump.rs  main.rs
