[package]
name = "dll"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate_type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr_core = "0.2"
libc = { version = "0.2", default-features = false }
num_enum = { version = "0.5", default-features = false }
widestring = { version = "0.5", default-features = false, features = ["alloc"] }

[build-dependencies]
cbindgen = "0.20"
